<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ROM Patcher</string>
    <string name="cantRead">folder can\'t be read!</string>
    <string name="choose_rom">Choose ROM</string>
    <string name="choose_patch">Choose patch</string>
    <string name="patch">Patch</string>
    <string name="bkup_rom">Backup ROM</string>
    <string name="bkup_rom_desc">Keeps original ROM file as ROMname.bak after patching</string>
    <string name="rename1">Rename patched ROM</string>
    <string name="rename2">Rename patched ROM to: </string>
    <string name="fileExt">Automatically add file extension</string>
    <string name="rename_desc">Renames ROM after patching to filename typed below. The file extension checkbox will automatically add the file extension of the original file to the filename typed below.</string>
    <string name="ignoreChks">Ignore checksum errors</string>
    <string name="ignoreChks_desc">Ignore file verification errors. If a checksum, CRC32, or validation error appears, try checking this box. This setting may break your files</string>
    <string name="warning">Warning</string>
    <string name="warning_desc">A backup, output, or required temporary file already exists. Overwrite?</string>
    <string name="zip_warning_desc">The file you are trying to patch looks like a zip file. You probably want to extract it first. Patch anyway?</string>
    <string name="nopatch">Patching canceled</string>
    <string name="wait">Please wait</string>
    <string name="wait_desc">Patching rom…</string>
    <string name="success">Patching successful.</string>
    <string name="fnf">File not found.</string>
    <string name="nagInfo">More Info</string>
    <string name="nagMsg">Consider purchasing ROM Patcher (Donation) to support future development</string>
    <!-- UPS Errors -->
    <string name="upsNegativeOne">UPS: Input file cannot be opened.</string>
    <string name="upsNegativeTwo">UPS: Output file cannot be opened.</string>
    <string name="upsNegativeThree">UPS: Patch file cannot be opened.</string>
    <string name="upsNegativeFour">UPS: Patch file size is too small.</string>
    <string name="upsNegativeFive">UPS: Patch CRC32 is invalid.</string>
    <string name="upsNegativeSix">UPS: Patch header is invalid.</string>
    <string name="upsNegativeSeven">UPS: Input file size and/or CRC32 invalid.</string>
    <string name="upsDefault">UPS: Unknown error: </string>
    <!-- End UPS Errors -->
	<!-- XDELTA1 Errors -->
	<string name="xdelta1Two">XDELTA1: Couldn\'t initialize edsio.</string>
	<string name="xdelta1Three">XDELTA1: Illegal maxmem arguments.</string>
	<string name="xdelta1Four">XDELTA1: Illegal arguments.</string>
	<string name="xdelta1Five">XDELTA1: Wrong number of arguments (5).</string>
	<string name="xdelta1Six">XDELTA1: Wrong number of arguments (6).</string>
	<string name="xdelta1Seven">XDELTA1: Could not process patch.</string>
	<string name="xdelta1Eight">XDELTA1: Opening output file failed.</string>
	<string name="xdelta1Nine">XDELTA1: Compression error.</string>
	<string name="xdelta1Ten">XDELTA1: Patch seek error.</string>
	<string name="xdelta1Eleven">XDELTA1: File length error.</string>
	<string name="xdelta1Twelve">XDELTA1: Apply delta error.</string>
	<string name="xdelta1Thirteen">XDELTA1: Closing error.</string>
    <string name="xdelta1Default">XDELTA1: Unknown error: </string>
	<!-- End XDELTA1 Errors -->
    <!-- XDELTA3 Errors -->
    <string name="xdelta3NegativeSeventeenThousandSevenHundredTen">XDELTA3: Internal error.</string>
	<string name="xdelta3NegativeSeventeenThousandSevenHundredEleven">XDELTA3: Invalid config.</string>
	<string name="xdelta3NegativeSeventeenThousandSevenHundredTwelve">XDELTA3: Input/output error. </string>
	<string name="xdelta3Default">XDELTA3: Unknown error: </string>
	<!-- End XDELTA3 Errors -->
	<!-- BPS Errors -->
	<string name="bpsOne">BPS: Broken error code.</string>
	<string name="bpsNegativeOne">BPS: Patch is too small.</string>
	<string name="bpsNegativeTwo">BPS: Patch header is invalid.</string>
	<string name="bpsNegativeThree">BPS: Source file is too small.</string>
	<string name="bpsNegativeFour">BPS: Target file is too small.</string>
	<string name="bpsNegativeFive">BPS: Source checksum is invalid.</string>
	<string name="bpsNegativeSix">BPS: Patch checksum is invalid.</string>
	<string name="bpsNegativeSeven">BPS: Patch checksum is invalid.</string>
	<string name="bpsNegativeEight">BPS: Unknown patching error: </string>
	<string name="bpsDefault">BPS: Unknown error: </string>
	<!-- End BPS Errors -->
	<!-- BSDIFF Errors -->
	<string name="bsdiffOne">BSDIFF: Read/Write error.</string>
	<string name="bsdiffTwo">BSDIFF: Corrupt patch.</string>
	<string name="bsdiffDefault">BSDIFF: Unknown error: </string>
	<!-- End BSDIFF Errors -->
	<!-- PPF Errors -->
	<string name="ppfOne">PPF: Broken error code.</string>
	<string name="ppfNegativeOne">PPF2: Incorrect file size.</string>
	<string name="ppfNegativeTwo">PPF2: Binblock/Patchvalidation failed.</string>
	<string name="ppfNegativeThree">PPF3: Binblock/Patchvalidation failed.</string>
	<string name="ppfNegativeFour">PPF3: No undo data available. (you shouldn\'t be seeing this)</string>
	<string name="ppfDefault">PPF: Unknown error: </string>
	<!-- End PPF Errors -->
	<!-- IPS Errors -->
	<string name="ipsOne">IPS: Patching stopped for unknown reason.</string>
	<string name="ipsNegativeOne">IPS: Error.</string>
	<string name="ipsNegativeTwo">IPS: File type error.</string>
	<string name="ipsNegativeThree">IPS: File opening error.</string>
	<string name="ipsNegativeFour">IPS: File saving error.</string>
	<string name="ipsNegativeFive">IPS: File read error.</string>
	<string name="ipsNegativeSix">IPS: Processing error.</string>
	<string name="ipsNegativeSeven">IPS: Offset error.</string>
	<string name="ipsDefault">IPS: Unknown error: </string>
	<!-- End IPS Errors -->
	<!-- IPS32 Errors -->
	<string name="ips32One">IPS32: Patching stopped for unknown reason.</string>
	<string name="ips32NegativeOne">IPS32: Error.</string>
	<string name="ips32NegativeTwo">IPS32: File type error.</string>
	<string name="ips32NegativeThree">IPS32: File opening error.</string>
	<string name="ips32NegativeFour">IPS32: File saving error.</string>
	<string name="ips32NegativeFive">IPS32: File read error.</string>
	<string name="ips32NegativeSix">IPS32: Processing error.</string>
	<string name="ips32NegativeSeven">IPS32: Offset error.</string>
	<string name="ips32Default">IPS32: Unknown error: </string>
	<!-- End IPS32 Errors -->
	<!-- ECM Errors -->
	<string name="ecmOne">ECM: Type count error.</string>
	<string name="ecmTwo">ECM: Sector/literal error.</string>
	<string name="ecmThree">ECM: ECM error.</string>
	<string name="ecmFour">ECM: UNECM error.</string>
	<string name="ecmFive">ECM: Usage error.</string>
	<string name="ecmDefault">ECM: Unknown error: </string>
	<!-- End ECM Errors -->
	<!-- DPS Errors -->
	<string name="dpsNegativeOne">DPS: Bad parameters.</string>
	<string name="dpsNegativeTwo">DPS: File size error.</string>
	<string name="dpsNegativeThree">DPS: Patching successful, but patch is unstable.</string>
	<string name="dpsDefault">DPS: Unknown error: </string>
	<!-- End DPS Errors -->
	<!-- ASM Errors -->
	<string name="asmDefault">ASM: Unknown error: </string>
	<!-- End ASM Errors -->
	<!-- DLDI Errors -->
	<string name="dldiDefault">DLDI: Unknown error: </string>
	<!-- End DLDI Errors -->
	<!-- APSN64 Errors -->
	<string name="apsn64Default">APSN64: Unknown error: </string>
	<!-- End APSN64 Errors -->
	<!-- APSGBA Errors -->
	<string name="apsgbaNegativeOne">APSGBA: Not a GBA APS Patch.</string>
	<string name="apsgbaNegativeTwo">APSGBA: Bad CRC1</string>
	<string name="apsgbaNegativeThree">APSGBA: Bad CRC2</string>
	<string name="apsgbaNegativeFour">APSGBA: Bad CRC1&amp;CRC2</string>
	<string name="apsgbaNegativeFive">APSGBA: I/O error</string>
	<string name="apsgbaDefault">APSGBA: Unknown error: </string>
	<!-- End APSGBA Errors -->
	<!-- XPC Errors -->
	<string name="xpcDefault">XPC: Unknown error: </string>
	<!-- End XPC Errors -->
	<!-- NMP Errors -->
	<string name="nmpDefault">NMP: %1$s (%2$d)</string>
	<!-- End NMP Errors -->
	<string name="errorDefault">Patch type invalid.</string>
	<string name="drmwarning">Not Available</string>
	<string name="drmwarning_desc">NMP support is only available in the donation version. View Google Play Page?</string>
</resources>
