<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
        android:layout_height="fill_parent">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <Button
        android:id="@+id/romButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/choose_rom" />

    <TextView
        android:id="@+id/romText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/romButton"
        android:text="@string/choose_rom"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/patchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/romButton"
        android:text="@string/choose_patch" />

    <TextView
        android:id="@+id/patchText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/patchButton"
        android:layout_alignBottom="@+id/patchButton"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/patchButton"
        android:text="@string/choose_patch"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageButton
        android:id="@+id/backupHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/patchButton"
        android:layout_toRightOf="@+id/backupCheckbox"
        android:src="@android:drawable/ic_menu_help" />

    <CheckBox
        android:id="@+id/backupCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/backupHelp"
        android:checked="true"
        android:text="@string/bkup_rom" />

    <CheckBox
        android:id="@+id/altNameCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/backupHelp"
        android:checked="false"
        android:text="@string/rename2" />

    <ImageButton
        android:id="@+id/outfileHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/backupHelp"
        android:layout_toRightOf="@+id/altNameCheckbox"
        android:src="@android:drawable/ic_menu_help" />

    <EditText
        android:id="@+id/txtOutFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/outfileHelp"
        android:layout_marginLeft="30dp"
        android:ems="10"
        android:enabled="false" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/applyPatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtOutFile"
        android:text="@string/patch"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
</ScrollView>